# EnkaCard

./: PKG-INFO  README.md  pyproject.toml  requirements.txt  setup.py
Example/: Easy start.py  Example1.py  Example2.py  Example3  Example3.py  Example4.py  Example5.py  Using templates 4.py
enkacard/: enc_error.py  encbanner.py  enkatools.py
enkacard/src/generator/: akasha_rank.py  profile_teample_one.py  profile_teample_two.py  teample_one.py  teample_two.py
enkacard/src/generator/one/: artifact.py  background.py  constant.py  prop.py  skill.py  stat.py  weapon.py
enkacard/src/generator/two/: artifact.py  background.py  skill.py  stat.py
enkacard/src/modal/: enkaToolsModel.py  enkacardCread.py
enkacard/src/pickle_cashe/: data_characters.pkz
enkacard/src/utils/: CreatBannerFive.py  CreatBannerFour.py  CreatBannerOne.py  CreatBannerSeven.py  CreatBannerSix.py  CreatBannerTree.py  CreatBannerTwo.py  FunctionsPill.py  Generation.py  affixes.py  diagram.py  git.py  gradient.py  openFile.py  options.py  pickle_cashe.py  pickle_err.py  pill.py  translation.py  userProfile.py
enkacard/src/utils/enkanetwork_update/: config.py  enka_update.py  pathfinding.py
enkanetworkcard/: aioencbanner.py  aioenkbanner.py  encbanner.py
enkanetworkcard/src/utils/: CreatBanner.py  CreatBannerFour.py  CreatBannerOne.py  CreatBannerTree.py  CreatBannerTwo.py  FunctionsPill.py  Generation.py  gradient.py  openFile.py  options.py  translate.py  translation.py  userProfile.py
readmeFile/: README.md
readmeFile/dark/: README.md
readmeFile/white/: README.md
