[tool.poetry]
name = "enkacard"
version = "3.3.9"
description = "An asynchronous module and API that allows you to connect to your bot the generation of Genshin character cards from the Enka.Network website."
authors = ["None"]

readme = 'README.md'  # Поддерживаются файлы в формате Markdown

repository = "https://github.com/DEViantUA/EnkaCard"
homepage = "https://github.com/DEViantUA/EnkaCard"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "*"
"enkanetworkv2.py" = "*"
cachetools = "*"
asyncache  = "*"
numpy = "*"
more-itertools = "*"
pydantic = "*"
aiofiles = "*"
matplotlib = "*"
python-magic = { platform = "windows", version = "^0.4.27" }
python-magic-bin = { platform = "windows", version = "^0.4.14" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

